# Candela

./: .gitignore  README.md  candela.desktop  meson.build  org.reend.candela.yml
candela/: __init__.py  birthday_dialog.py  birthday_row.py  candela.in  data_manager.py  main.py  meson.build  preferences.py  style.css  translations.py  window.py
data/: meson.build  org.reend.candela.desktop.in  org.reend.candela.metainfo.xml
